Coverity analysis defect 177343: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-10-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/cbf16adf5e210cc201c1fc86c16781cd/bazel_cache/1d017afe5b6ca4d804a8cd70101ef2f3/execroot/_main/src/mongo/db/exec/sbe/values/ts_block.h:251: UNINIT_CTOR 177343 Class member declaration for "_count".
      /src/mongo/db/exec/sbe/values/ts_block.cpp:506: UNINIT_CTOR 177343 Non-static class member "_count" is not initialized in this constructor nor in any functions that it calls.
      /data/mci/cbf16adf5e210cc201c1fc86c16781cd/bazel_cache/1d017afe5b6ca4d804a8cd70101ef2f3/execroot/_main/src/mongo/db/exec/sbe/values/ts_block.h:255: UNINIT_CTOR 177343 Class member declaration for "_bucketVersion".
      /src/mongo/db/exec/sbe/values/ts_block.cpp:506: UNINIT_CTOR 177343 Non-static class member "_bucketVersion" is not initialized in this constructor nor in any functions that it calls.
      /data/mci/cbf16adf5e210cc201c1fc86c16781cd/bazel_cache/1d017afe5b6ca4d804a8cd70101ef2f3/execroot/_main/src/mongo/db/exec/sbe/values/ts_block.h:258: UNINIT_CTOR 177343 Class member declaration for "_isTimeField".
      /src/mongo/db/exec/sbe/values/ts_block.cpp:506: UNINIT_CTOR 177343 Non-static class member "_isTimeField" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Niels Lohmann
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: