SERVER-111996 Refactor TSBlock constructor (#42268)

GitOrigin-RevId: c16cd33b2ec6fae1030bb476477b4390d7bc42f0